feat(Integration) Integrate auth and prop-listing

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,7 @@ CORS_ORIGIN=*
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+JWT_SECRET=
+SESSION_SECRET=
+SMTP_USER=
+SMTP_PASS= 
