--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
-PORT=8000
-MONGODB_URI=
+CLOUDINARY_API_KEY=691266575264241
+CLOUDINARY_API_SECRET=go9nhim0FJBhfSK7S5pMgq19_s
+CLOUDINARY_CLOUD_NAME=druwnwfur
 CORS_ORIGIN=*
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-JWT_SECRET=
-SESSION_SECRET=
-SMTP_USER=
-SMTP_PASS= 
+JWT_SECRET=56345ghjgrf76t4yugf6743
+MONGODB_URI=mongodb+srv://toletglobetech:ToletGlobe%401234@toletglobe.ux8lg4n.mongodb.net/blog?retryWrites=true&w=majority&appName=ToLetGlobe
+PORT=8000
+SESSION_SECRET=54hj4hg4g8643giufg8
+SMTP_PASS=rwfv wspt vvzj tbux
+SMTP_USER=toletglobetech@gmail.com
